fix: change from 0.8rem to 0.75 for better visibility

--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -237,7 +237,7 @@
     color: var(--sl-color-gray-3);
     text-transform: uppercase;
     font-weight: 700;
-    font-size: 0.8rem;
+    font-size: 0.75rem;
     display: block;
   }
 
